--- a/Database/src/index.css
+++ b/Database/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,400;10..48,700&family=Raleway:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,400;10..48,700&family=Raleway:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Bricolage Grotesque', sans-serif;
+  font-family: "Bricolage Grotesque", sans-serif;
   line-height: 1.5;
 
   color: #defaf8;
@@ -23,6 +23,7 @@ body {
   margin: 0;
   padding: 2rem;
   background: linear-gradient(180deg, #1f1c2c 0%, #1f1c2c 100%);
+  height: 100vh;
 }
 
 header {
@@ -59,7 +60,7 @@ header p {
 }
 
 .places-category h2 {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 1.5rem;
   margin: 0;
   padding: 0;
@@ -121,7 +122,7 @@ header p {
 }
 
 .place-item h3 {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: normal;
   font-size: 0.9rem;
   position: absolute;
@@ -139,7 +140,7 @@ header p {
 }
 
 #delete-confirmation h2 {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 1.5rem;
   margin: 0;
   padding: 0;
@@ -162,7 +163,7 @@ header p {
 
 .button {
   cursor: pointer;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 1rem;
   padding: 0.5rem 1.5rem;
   border: none;
@@ -181,7 +182,7 @@ header p {
   background: transparent;
   border: none;
   padding: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 1rem;
   color: #5d0909;
 }
@@ -197,7 +198,7 @@ header p {
 }
 
 .modal {
-  min-width: 30rem;;
+  min-width: 30rem;
   padding: 0;
   z-index: 2;
   background: #d5c7bc;
