--- a/ecommerce/ecommerce/styles/globals.css
+++ b/ecommerce/ecommerce/styles/globals.css
@@ -3,11 +3,14 @@
 @tailwind utilities;
 
 input,
-textarea {
+textarea,
+select {
   @apply border border-b-2  border-gray-400 rounded-md px-2 w-full mb-2 p-2;
 }
 
-input:focus {
+input:focus,
+textarea:focus,
+select:focus {
   @apply border-blue-900;
 }
 
@@ -16,7 +19,7 @@ img {
 }
 
 h1 {
-  @apply text-blue-900 mb-4 text-lg;
+  @apply text-gray-900 mb-4  text-lg;
 }
 
 label {
@@ -24,23 +27,23 @@ label {
 }
 
 .btn-primary {
-  @apply bg-blue-900 text-white px-4 py-1 rounded-md;
+  @apply bg-primary  text-white px-4 py-1 rounded-md;
 }
 
 table.basic {
-  @apply w-full;
+  @apply w-full bg-white rounded-sm shadow-md;
 }
 
 table.basic thead tr td {
-  @apply bg-blue-100;
+  @apply text-sm text-gray-600 uppercase border-b border-gray-200 px-4 py-2;
 }
 
 table.basic tr td {
-  @apply border border-blue-300 p-1;
+  @apply px-4 py-2;
 }
 
 table.basic a {
-  @apply bg-blue-900 text-white text-sm py-1 rounded-md px-2 inline-flex gap-1 mr-2;
+  @apply bg-gray-700 text-white text-sm py-1 rounded-sm px-2 inline-flex gap-1 mr-2;
 }
 
 .btn-red,
@@ -49,9 +52,9 @@ table.basic a {
 }
 
 .btn-red {
-  @apply bg-red-800;
+  @apply bg-red-200 text-red-600 shadow-md;
 }
 
 .btn-default {
-  @apply bg-gray-400;
+  @apply bg-white text-gray-800 px-4 py-1 rounded-lg border border-gray-400 shadow-md;
 }
